--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,15 @@
 {
   "version": "0.2.0",
   "configurations": [
+
+
     {
       "type": "node",
       "request": "attach",
       "name": "DEBUG Irongenerate",
       "port": 9229,
       "protocol": "inspector",
-      "restart": "true"
+      "restart": true
     }
   ]
 }
